# pywrapper

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  wrap_apis.py
src/: CMakeLists.txt  pywrapper.cpp  pywrapper.h  pywrapper_callbacks.h  pywrapper_embed.h  pywrapper_object.h  pywrapper_thread.h  pywrapper_types.h
src/api/: pywrapper_api.h  pywrapper_api_allocation.h  pywrapper_api_arg.h  pywrapper_api_bool.h  pywrapper_api_buffer.h  pywrapper_api_bytearray.h  pywrapper_api_capsule.h  pywrapper_api_cell.h  pywrapper_api_class.h  pywrapper_api_cobject.h  pywrapper_api_code.h  pywrapper_api_codec.h  pywrapper_api_complex.h  pywrapper_api_conversion.h  pywrapper_api_datetime.h  pywrapper_api_descriptor.h  pywrapper_api_dict.h  pywrapper_api_exceptions.h  pywrapper_api_file.h  pywrapper_api_float.h  pywrapper_api_function.h  pywrapper_api_gcsupport.h  pywrapper_api_gen.h  pywrapper_api_import.h  pywrapper_api_int.h  pywrapper_api_iter.h  pywrapper_api_iterator.h  pywrapper_api_list.h  pywrapper_api_long.h  pywrapper_api_mapping.h  pywrapper_api_marshal.h  pywrapper_api_memory.h  pywrapper_api_method.h  pywrapper_api_module.h  pywrapper_api_number.h  pywrapper_api_objbuffer.h  pywrapper_api_object.h  pywrapper_api_refcounting.h  pywrapper_api_reflection.h  pywrapper_api_sequence.h  (+10 more)
test/: CMakeLists.txt  example.cpp  init.cpp  noddy.cpp  noddy.h
